--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -22,7 +22,7 @@ entries:
     sources:
     - https://github.com/jetstack/cert-manager
     urls:
-    - charts/cert-manager-v1.5.4.tgz
+    - cert-manager-v1.5.4.tgz
     version: v1.5.4
   external-dns:
   - annotations:
@@ -53,7 +53,7 @@ entries:
     - https://github.com/bitnami/bitnami-docker-external-dns
     - https://github.com/kubernetes-sigs/external-dns
     urls:
-    - charts/external-dns-5.4.10.tgz
+    - external-dns-5.4.10.tgz
     version: 5.4.10
   gitpod:
   - apiVersion: v2
@@ -82,7 +82,7 @@ entries:
     kubeVersion: '>=1.19.0-0'
     name: gitpod
     urls:
-    - charts/gitpod-1.3.4.tgz
+    - gitpod-1.3.4.tgz
     version: 1.3.4
   jaeger-operator:
   - apiVersion: v1
@@ -101,6 +101,6 @@ entries:
     sources:
     - https://github.com/jaegertracing/jaeger-operator
     urls:
-    - charts/jaeger-operator-2.25.0.tgz
+    - jaeger-operator-2.25.0.tgz
     version: 2.25.0
 generated: "2021-10-13T13:52:57.468913431+02:00"
